make Jayo Java 17 compatible fix #23